# university-db

./: .gitignore  CMakeLists.txt  address.cpp  address.hpp  data_generator.cpp  data_generator.hpp  database.cpp  database.hpp  employee.cpp  employee.hpp  errors.hpp  main.cpp  menu.cpp  menu.hpp  person.cpp  person.hpp  random_gen_test.cpp  student.cpp  student.hpp  tests.cpp
